<resources>
    <string name="app_name">Wanna Movie</string>

    <string name="title">WANNA MOVIE</string>
    <string name="subTitle">당신의 영화를 보여주세요</string>


    <string name="tv_signup_question">아직 워너무비의 회원이 아니신가요?</string>
    <string name="tv_signup"><u>회원가입</u></string>


    <string name="tv_signup1_des">회원님의 정보를\n입력해주세요!</string>

    <string name="et_hint_regist_name">이름을 입력해주세요</string>
    <string name="et_hint_regist_id">아이디를 입력해주세요</string>
    <string name="et_hint_regist_pw">비밀번호를 입력해주세요</string>
    <string name="et_hint_regist_pw_check">비밀번호를 다시 입력해주세요</string>
    <string name="et_hint_regist_age">나이를 입력해주세요</string>

    <string name="tv_signup_des">재개봉 요청하러\n가볼까요?</string>

    <string name="et_hint_regist_address">OO시 OO구/군 OO동</string>

    <string-array name="profession_dataList">
        <item>직업선택</item>
        <item>초중고생</item>
        <item>대학생</item>
        <item>직장인</item>
        <item>기타</item>
    </string-array>

    <string-array name="keywordType_dataList">
        <item>제목검색</item>
        <item>감독검색</item>
        <item>장르검색</item>
    </string-array>

    <string-array name="datacount_dataList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>



    <string-array name="keywordType_admin">
        <item>나이</item>
        <item>성별</item>
        <item>지역</item>
    </string-array>

    <string-array name="keywordType_admin_age">
        <item>10대</item>
        <item>20대</item>
        <item>30대</item>
        <item>40대</item>
        <item>50대</item>
        <item>60대</item>
        <item>70대</item>
    </string-array>

    <string-array name="keywordType_admin_sex">
        <item>남성</item>
        <item>여성</item>
    </string-array>

    <string-array name="keywordType_admin_address">
        <item>강남구</item>
        <item>관악구</item>
        <item>서대문구</item>
        <item>동작구</item>
    </string-array>



    <string name="tv_home_banner_des">영화 재개봉 요청 서비스</string>

    <string name="tv_home_age_top5">나이 Top5 재개봉 요청 영화</string>
    <string name="tv_home_sex_top5">성별 Top5 재개봉 요청 영화</string>
    <string name="tv_home_address_top5">지역 Top5 재개봉 요청 영화</string>

</resources>